test/testData/parser/negative/statements/gotoLabels.err
test/testData/parser/negative/statements/gotoLabels.c:14:7: error: redefinition of label 'bb'
test/testData/parser/negative/statements/gotoLabels.c:22:7: error: use of undeclared label 'cc'
test/testData/parser/negative/statements/gotoLabels.c:31:16: error: use of undeclared label 'cc'
